# setch

./: .gitignore  README.md  pyproject.toml
src/setch/: core.py
src/setch/sys/: check.py  info.py
