[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "setch"
version = "1.0.0"
requires-python = ">=3.10"
description = "A utility for retrieving system information on Linux systems"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["Linux", "Utility", "Information"]

[project.urls]
repository = "https://github.com/mentiferous/setch"

[tool.isort]
profile = "black"
